--- a/.github/workflows/addon-check-pr2.yml
+++ b/.github/workflows/addon-check-pr2.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - '*'
+  pull_request:
+    branches:
+      - '*'
   pull_request_target:
     branches:
       - '*'
