--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -24,8 +24,12 @@ jobs:
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
 
-    - name: Extract repo target
+    - name: Extract repo target branch
       shell: bash
       run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       id: extract_branch
+
+    - name: Echo vars
+      run: echo ${{ steps.extract_branch.outputs.branch }}
+
 
