--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -24,7 +24,12 @@ jobs:
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
 
+    - name: Extract repo target branch
+      shell: bash
+      run: echo "##[set-output name=addon;]$(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq))"
+      id: extract_branch
+
     - name: Echo vars
-      run: echo ${{ github.event.pull_request.base.ref }}
+      run: echo #${{ github.event.pull_request.base.ref }}
 
 
