--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -30,6 +30,6 @@ jobs:
       id: extract_branch
 
     - name: Echo vars
-      run: echo #${{ github.event.pull_request.base.ref }}
+      run: echo ${{ steps.extract_branch.outputs.branch }} #${{ github.event.pull_request.base.ref }}
 
 
