--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -30,6 +30,6 @@ jobs:
       id: extract_branch
 
     - name: Echo vars
-      run: echo ${{ steps.extract_branch.outputs.branch }} #${{ github.event.pull_request.base.ref }}
+      run: echo $(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq) #echo ${{ steps.extract_branch.outputs.branch }} #${{ github.event.pull_request.base.ref }}
 
 
