--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -24,12 +24,12 @@ jobs:
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
 
-    - name: Extract repo target branch
+    - name: Extract job variables
       shell: bash
       run: echo "##[set-output name=addon;]$(echo $(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq)))"
-      id: extract_branch
+      id: extract_vars
 
     - name: Echo vars
-      run: echo $(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq) #echo ${{ steps.extract_branch.outputs.branch }} #${{ github.event.pull_request.base.ref }}
+      run: echo ${{ steps.extract_vars.outputs.addon }} #${{ github.event.pull_request.base.ref }}
 
 
