--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Extract job variables
       shell: bash
-      run: echo "##[set-output name=addon;]$(echo $(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq)))"
+      run: echo "##[set-output name=addon;]$(echo $(git diff --diff-filter=d --name-only HEAD~ | grep / | cut -d / -f1 | sort | uniq))"
       id: extract_vars
 
     - name: Echo vars
