--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
+        kodi-addon-checker --branch=matrix --PR plugin.audio.mixcloud
 
     - name: Extract job variables
       shell: bash
