--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        cd /
+        export PATH=/home/runner/.local/bin:$PATH
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
 
