--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -21,7 +21,6 @@ jobs:
 
     - name: Install dependencies
       run: |
-        export PATH=/home/runner/.local/bin:$PATH
         python -m pip install --upgrade pip
         pip3 install --user kodi-addon-checker
 
@@ -31,6 +30,6 @@ jobs:
       id: extract_vars
 
     - name: Addon-Check
-      run: echo $PATH #kodi-addon-checker --branch=${{ github.event.pull_request.base.ref }} --PR ${{ steps.extract_vars.outputs.addon }}
+      run: /home/runner/.local/bin/kodi-addon-checker --branch=${{ github.event.pull_request.base.ref }} --PR ${{ steps.extract_vars.outputs.addon }}
 
 
