--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -30,6 +30,9 @@ jobs:
       id: extract_vars
 
     - name: Addon-Check
-      run: $HOME/.local/bin/kodi-addon-checker --branch=${{ github.event.pull_request.base.ref }} --PR ${{ steps.extract_vars.outputs.addon }}
+      run: $HOME/.local/bin/kodi-addon-checker --branch=${{ github.event.pull_request.base.ref }} --PR ${{ steps.extract_vars.outputs.addon }} | tee addon-checker.log
+
+    - name: cat log
+      run: cat addon-checker.log
 
 
