--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -32,21 +32,15 @@ jobs:
     - name: Addon-Check
       run: $HOME/.local/bin/kodi-addon-checker --branch=${{ github.event.pull_request.base.ref }} --PR ${{ steps.extract_vars.outputs.addon }} | tee addon-checker.log
 
-    - name: Dump github context
-      run:   echo "$GITHUB_CONTEXT"
-      shell: bash
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-
     - name: Job success
       if: ${{ success() }}
-      run: $HOME/.local/bin/gh-pr-commenter.py ${{ github.repository.name }} ${{ github.event.number }}
+      run: $HOME/.local/bin/gh-pr-commenter.py ${{ github.repository }} ${{ github.event.number }} bot-success-template.md addon-checker.log
       env:
         GH_TOKEN: ${{secrets.GH_TOKEN}}
 
     - name: Job failure
       if: ${{ failure() }}
-      run: cat addon-checker.log
+      run: $HOME/.local/bin/gh-pr-commenter.py ${{ github.repository }} ${{ github.event.number }} bot-failure-template.md addon-checker.log
       env:
         GH_TOKEN: ${{secrets.GH_TOKEN}}
 
