--- a/.github/workflows/coiso.yml
+++ b/.github/workflows/coiso.yml
@@ -36,13 +36,13 @@ jobs:
       if: ${{ success() }}
       shell: bash
       env:
-        GH_TOKEN: ${{secrets.GH_TOKEN}}
+        GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       run: $HOME/.local/bin/gh-pr-commenter.py ${{ github.repository }} ${{ github.event.number }} bot-success-template.md addon-checker.log
 
     - name: Job failure
       if: ${{ failure() }}
       shell: bash
       env:
-        GH_TOKEN: ${{secrets.GH_TOKEN}}
+        GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
       run: $HOME/.local/bin/gh-pr-commenter.py ${{ github.repository }} ${{ github.event.number }} bot-failure-template.md addon-checker.log
 
